syntax = "proto3";

package api.v1;

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Signup(SignupRequest) returns (SignupResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc GetCurrentUser(GetCurrentUserRequest) returns (GetCurrentUserResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  User user = 3;
}

message SignupRequest {
  string email = 1;
  string password = 2;
  string full_name = 3;
  string phone = 4;
}

message SignupResponse {
  string access_token = 1;
  string refresh_token = 2;
  User user = 3;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
}

message LogoutRequest {}

message LogoutResponse {
  bool success = 1;
}

message GetCurrentUserRequest {}

message GetCurrentUserResponse {
  User user = 1;
}

message User {
  string id = 1;
  string email = 2;
  string full_name = 3;
  string phone = 4;
  string created_at = 5;
}
